@@ -126,11 +126,19 @@ cost(unsigned int words, float cycles)
 }
 
 static void
-emitJP(const symbol *target, float probability)
+emitJP (const symbol *target, float probability)
 {
   if (!regalloc_dry_run)
     emit2 ("goto", "%05d$", labelKey2num (target->key));
   cost (1, 2 * probability);
+}
+
+/* Emit label for target of conditional execution - necessary to make peephole optimizer treat conditional skips as conditional jumps. */
+static void
+emitCondTargetLbl (void)
+{
+  if (!regalloc_dry_run)
+    emitLabel (newiTempLabel (0));
 }
 
 static bool
@@ -2459,6 +2467,7 @@ genMinus (const iCode *ic, const iCode *ifx)
           emit2 ("dzsn", aopGet (left->aop, 0));
           cost (1, 1.8f);
           emitJP (IC_TRUE (ifx), 0.2f);
+          emitCondTargetLbl ();
         }
       else if (aopInReg (left->aop, 0, A_IDX) || aopInReg (left->aop, 1, A_IDX) && IC_TRUE (ifx))
         {
@@ -2472,6 +2481,7 @@ genMinus (const iCode *ic, const iCode *ifx)
           emit2 ("ceqsn", "a, #0x00");
           cost (1 + left->aop->size, left->aop->size + 1.8f);
           emitJP (IC_TRUE (ifx), 0.2f);
+          emitCondTargetLbl ();
           
           for (int i = 0; i < left->aop->size; i++)
             {
@@ -2480,6 +2490,7 @@ genMinus (const iCode *ic, const iCode *ifx)
               emit2 ("ceqsn", "a, %s", aopGet (left->aop, i));
               cost (1, 1.8f);
               emitJP (IC_TRUE (ifx), 0.2f);
+              emitCondTargetLbl ();
             }
         }
       else if (left->aop->size == 1 && IC_FALSE (ifx))
@@ -2492,6 +2503,7 @@ genMinus (const iCode *ic, const iCode *ifx)
           emit2 ("t0sn.io", "f, z");
           cost (2, 2.5f);
           emitJP (IC_FALSE (ifx), 0.5f);
+          emitCondTargetLbl ();
         }
       else
         {
@@ -2641,15 +2653,18 @@ genCmp (const iCode *ic, iCode *ifx)
               emit2 ("ceqsn", "a, #0x%02x", byteOfVal (right->aop->aopu.aop_lit, 0) + 1);
               emit2 ("t1sn.io", "f, c");
               cost (2, 2.5);
+              emitCondTargetLbl ();
             }
           else
             {
               emit2 ("ceqsn", "a, #0x%02x", byteOfVal (right->aop->aopu.aop_lit, 0) + 1);
               emit2 ("nop", "");
+              emitCondTargetLbl ();
               emit2 ("t0sn.io", "f, c");
               cost (3, 3.5);
             }
           emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.5f);
+          emitCondTargetLbl ();
           goto release;
         }
       else if (ic->op == '<' && aopInReg (left->aop, 0, A_IDX) && (right->aop->type == AOP_LIT || right->aop->type == AOP_DIR || aopInReg (right->aop, 0, P_IDX)) && (IC_TRUE (ifx) || !regDead (A_IDX, ic)))
@@ -2659,6 +2674,7 @@ genCmp (const iCode *ic, iCode *ifx)
               emit2 ("ceqsn", "a, %s", aopGet (right->aop, 0));
               emit2 ("t1sn.io", "f, c");
               cost (2, 2.5);
+              emitCondTargetLbl ();
             }
           else if ((TARGET_IS_PDK15 || TARGET_IS_PDK16) && (right->aop->type == AOP_DIR || aopInReg (right->aop, 0, P_IDX)))
             {
@@ -2670,10 +2686,12 @@ genCmp (const iCode *ic, iCode *ifx)
             {
               emit2 ("ceqsn", "a, %s", aopGet (right->aop, 0));
               emit2 ("nop", "");
+              emitCondTargetLbl ();
               emit2 ("t0sn.io", "f, c");
               cost (3, 3.5);
             }
           emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.5f);
+          emitCondTargetLbl ();
           goto release;
         }
     }
@@ -2700,6 +2718,7 @@ genCmp (const iCode *ic, iCode *ifx)
                        emit2 ("ceqsn", "a, #0x80");
                        emit2 ("nop", "");
                        cost (2, 2);
+                       emitCondTargetLbl ();
                      }
                    else
                      {
@@ -2714,9 +2733,11 @@ genCmp (const iCode *ic, iCode *ifx)
                    emit2 ("ceqsn", "a, #0x80");
                    emit2 ("t1sn.io", "f, c");
                    cost (2, 2.5);
+                   emitCondTargetLbl ();
                  }
 
                emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.5f);
+               emitCondTargetLbl ();
             }
           else
             {
@@ -2796,6 +2817,7 @@ genCmp (const iCode *ic, iCode *ifx)
     {
       emit2 ("t0sn.io", "f, ov");
       emit2 ("xor", "a, #0x80");
+      emitCondTargetLbl ();
       emit2 ("sl", "a");
       cost (3, 3);
     }
@@ -2805,6 +2827,7 @@ genCmp (const iCode *ic, iCode *ifx)
       emit2 (IC_FALSE(ifx) ? "t1sn.io" : "t0sn.io", "f, c");
       cost (1, 1.5);
       emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.5f);
+      emitCondTargetLbl ();
     }
   else
     {
@@ -2869,6 +2892,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
       emit2 ("ceqsn", "a, %s", aopGet (right->aop, 1));
       cost (1, 1.0f);
       emitJP (lbl_ne, 1.0f);
+      emitCondTargetLbl ();
       
       if (ifx && ((ic->op == EQ_OP) ^ (bool)(IC_FALSE(ifx))))
         {
@@ -2880,6 +2904,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
               emit2 ("ceqsn", "a, %s", aopGet (right->aop, 0));
               emitJP (tlbl, 0.0f);
               cost (2, 0);
+              emitCondTargetLbl ();
               emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.0f);
               emitLabel (tlbl);
             }
@@ -2888,6 +2913,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
               emit2 ("cneqsn", "a, %s", aopGet (right->aop, 0));
               cost (1, 0);
               emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.0f);
+              emitCondTargetLbl ();
             }
         }
       else if (aopInReg (left->aop, 0, P_IDX) && regDead (P_IDX, ic) && aopIsLitVal (right->aop, 0, 1, 0xff))
@@ -2895,6 +2921,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
           emit2 ("izsn", "p");
           cost (1, 0);
           emitJP (lbl_ne, 0.0f);
+          emitCondTargetLbl ();
         }
       else
         {
@@ -2903,6 +2930,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
           emit2 ("ceqsn", "a, %s", aopGet (right->aop, 0));
           cost (1, 0);
           emitJP (lbl_ne, 0.0f);
+          emitCondTargetLbl ();
         }
     }
   else
@@ -2947,6 +2975,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
                 emit2 ("ceqsn", "a, %s", (right->aop->type == AOP_SFR || right->aop->type == AOP_STK || right->aop->type == AOP_CODE || right->aop->type == AOP_STL && !i) ? "p" : aopGet (right->aop, i));
                 emitJP (tlbl, 0.0f);
                 cost (2, 3);
+                emitCondTargetLbl ();
                 emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.0f);
                 emitLabel (tlbl);
               }
@@ -2955,6 +2984,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
                 emit2 ("cneqsn", "a, %s", (right->aop->type == AOP_SFR || right->aop->type == AOP_STK || right->aop->type == AOP_CODE || right->aop->type == AOP_STL && !i) ? "p" : aopGet (right->aop, i));
                 cost (1, 1);
                 emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.0f);
+                emitCondTargetLbl ();
               }
           }
         else
@@ -2962,6 +2992,7 @@ genCmpEQorNE (const iCode *ic, iCode *ifx)
             emit2 ("ceqsn", "a, %s", (right->aop->type == AOP_SFR || right->aop->type == AOP_STK || right->aop->type == AOP_CODE || right->aop->type == AOP_STL && !i) ? "p" : aopGet (right->aop, i));
             cost (1, 1);
             emitJP(lbl_ne, 0.0f);
+            emitCondTargetLbl ();
           }
       }
 
@@ -3208,6 +3239,7 @@ genAnd (const iCode *ic, iCode *ifx)
               emit2 ("ceqsn", "a, #0x00");
               cost (1, 1.5);
               emitJP (tlbl, 0.5f);
+              emitCondTargetLbl ();
               emitJP (IC_FALSE (ifx), 0.5f);
               emitLabel (tlbl);
               goto release;
@@ -3220,6 +3252,7 @@ genAnd (const iCode *ic, iCode *ifx)
         }
 
       emitJP (IC_FALSE (ifx) ? IC_FALSE (ifx) : IC_TRUE (ifx), 0.5f);
+      emitCondTargetLbl ();
 
       goto release;
     }
@@ -3281,6 +3314,7 @@ genAnd (const iCode *ic, iCode *ifx)
             }
 
           emitJP (IC_TRUE (ifx), 0.5f);
+          emitCondTargetLbl ();
         }
 
       goto release;
@@ -3576,6 +3610,7 @@ genLeftShift (const iCode *ic)
           if (!regalloc_dry_run)
             emit2 ("goto", "!tlabel", labelKey2num (tlbl->key));
           cost (2, 2);
+          emitCondTargetLbl ();
         }
 
       regalloc_dry_run_cycle_scale = 1;
@@ -3607,6 +3642,7 @@ genLeftShift (const iCode *ic)
       if (!regalloc_dry_run)
         emit2 ("goto", "!tlabel", labelKey2num (tlbl2->key));
       cost (3, 3);
+      emitCondTargetLbl ();
     
       for(int i = 0; i < size; i++)
         {
@@ -3798,6 +3834,7 @@ genRightShift (const iCode *ic)
                    emit2 ("sl", "a");
                    emit2 ("t0sn.io", "f, c");
                    emit2 ("or", "a, #0x01", aopGet (result->aop, size - 1));
+                   emitCondTargetLbl ();
                    emit2 ("src", "a");
                    emit2 ("src", "a");
                    cost (5, 5);
@@ -3867,6 +3904,7 @@ genRightShift (const iCode *ic)
           if (!regalloc_dry_run)
             emit2 ("goto", "!tlabel", labelKey2num (tlbl->key));
           cost (2, 2);
+          emitCondTargetLbl ();
         }
 
       regalloc_dry_run_cycle_scale = 1;
@@ -3900,6 +3938,7 @@ genRightShift (const iCode *ic)
       if (!regalloc_dry_run)
         emit2 ("goto", "!tlabel", labelKey2num (tlbl2->key));
       cost (3, 3);
+      emitCondTargetLbl ();
 
       if (!SPEC_USIGN (getSpec (operandType (left))) || result->aop->type == AOP_STK)
         {
@@ -3918,6 +3957,7 @@ genRightShift (const iCode *ic)
               emit2 ("sl", "p");
               emit2 ("t0sn.io", "f, c");
               emit2 ("or", "p, a");
+              emitCondTargetLbl ();
               emit2 ("src", "p");
               emit2 ("src", "p");
               cheapMove (result->aop, size - 1, ASMOP_P, 0, true, true, size == 1);
@@ -3928,6 +3968,7 @@ genRightShift (const iCode *ic)
               emit2 ("sl", aopGet (result->aop, size - 1));
               emit2 ("t0sn.io", "f, c");
               emit2 ("or", "%s, a", aopGet (result->aop, size - 1));
+              emitCondTargetLbl ();
               emit2 ("src", aopGet (result->aop, size - 1));
               emit2 ("src", aopGet (result->aop, size - 1));
               cost (6, 6);
@@ -4034,9 +4075,11 @@ static void getBitFieldByte (int len, int str, bool sex)
       symbol *const tlbl = regalloc_dry_run ? 0 : newiTempLabel (0);
       emit2 ("ceqsn", "a, #0x%02x", 0x80 >> (8 - len));
       emit2 ("nop", "");
+      emitCondTargetLbl ();
       emit2 ("t0sn.io", "f, c");
       if (tlbl)
         emit2 ("goto", "!tlabel", labelKey2num (tlbl->key));
+      emitCondTargetLbl ();
       emit2 ("or", "a, #0x%02x", (0xff00 >> (8 - len)) & 0xff);
       cost (5, 5);
       emitLabel (tlbl);
@@ -4545,6 +4588,7 @@ genPointerSet (iCode *ic)
                   emit2 ("t0sn.io", "f, c");
                   emit2 ("or", "a, #0x%02x", 1 << bstr);
                   cost (3, 3);
+                  emitCondTargetLbl ();
                 }
               else
                 {
@@ -4721,9 +4765,11 @@ genIfx (const iCode *ic)
           emit2 ("ceqsn", "a, #0");
           cost (1, 1.5f);
           emitJP (IC_TRUE (ic), 0.5f);
+          emitCondTargetLbl ();
           emit2 ("ceqsn", "a, p");
           cost (1, 0.75f);
           emitJP (IC_TRUE (ic), 0.375f);
+          emitCondTargetLbl ();
           goto release;
         }
       else if (!TARGET_IS_PDK13)
@@ -4732,6 +4778,7 @@ genIfx (const iCode *ic)
           emit2 ("ceqsn", "a, #0");
           if (!regalloc_dry_run)
             emit2 ("goto", "#!tlabel", labelKey2num (tlbl->key));
+          emitCondTargetLbl ();
           emit2 ("cneqsn", "a, p");
           cost (3, 3.25f);
           emitJP (IC_FALSE (ic), 0.375f);
@@ -4782,6 +4829,7 @@ genIfx (const iCode *ic)
       emit2 ("ceqsn", "a, #0x00");
       emitJP (tlbl, 0.0f);
       cost (2, 3);
+      emitCondTargetLbl ();
       emitJP (IC_FALSE (ic), 0.0f);
       emitLabel (tlbl);
     }
@@ -4790,6 +4838,7 @@ genIfx (const iCode *ic)
       emit2 (IC_FALSE (ic) ? "cneqsn" : "ceqsn", "a, #0x00");
       cost (1, 1); 
       emitJP (IC_FALSE (ic) ? IC_FALSE (ic) : IC_TRUE (ic), 0.0f);
+      emitCondTargetLbl ();
     }
 
 release:
@@ -4935,9 +4984,11 @@ genCast (const iCode *ic)
           symbol *const tlbl = regalloc_dry_run ? 0 : newiTempLabel (0);
           emit2 ("ceqsn", "a, #0x%02x", 0x80 >> (8 - SPEC_BITINTWIDTH (resulttype) % 8));
           emit2 ("nop", "");
+          emitCondTargetLbl ();
           emit2 ("t0sn.io", "f, c");
           if (tlbl)
             emit2 ("goto", "!tlabel", labelKey2num (tlbl->key));
+          emitCondTargetLbl ();
           emit2 ("or", "a, #0x%02x", ~topbytemask & 0xff);
           cost (5, 5);
           emitLabel (tlbl);
@@ -4992,12 +5043,8 @@ genCast (const iCode *ic)
 
       emit2 ("ceqsn", "a, #0x00");
       emit2 ("mov", "a, #0x01");
-      if (!regalloc_dry_run) // Dummy label as target for ceqsn to prevent peephole optimizer from optimizing out mov.
-        {
-          symbol *tlbl = newiTempLabel (0);
-          emitLabel (tlbl);
-        }
       cost (2, 2);
+      emitCondTargetLbl ();
 
       cheapMove (result->aop, 0, ASMOP_A, 0, true, true, true);
     }
@@ -5070,6 +5117,7 @@ genDummyRead (const iCode *ic)
           emit2 ("ceqsn", "a, %s", aopGet (op->aop, i));
           emit2 ("nop", "");
           cost (2, 2);
+          emitCondTargetLbl ();
         }
   else
     {
